update censor avatar

--- a/Project/Client/Views/Home/Index.cshtml
+++ b/Project/Client/Views/Home/Index.cshtml
@@ -2,7 +2,8 @@
 @model UserProductViewModel
 
 
-@* <div class="Image_Gallery">
+@*
+<div class="Image_Gallery">
     <div class="box">
         <span style="--i:1"><img src="~/image/game.jpg" /></span>
         <span style="--i:2"><img src="~/image/g4t.png" /></span>
@@ -18,7 +19,7 @@
 <div id="g_id_onload"
      data-client_id="931532368031-fve5bfiu4t6uvu5laj3gq9fbj7okl43e.apps.googleusercontent.com"
      data-login_uri='/google-response'
-     data-auto_prompt= 'false'>
+     data-auto_prompt='false'>
 </div>
 
 <div id="carouselExampleInterval" class="carousel slide mt-4 w-100 h-100" data-bs-ride="carousel" style="border-radius:5px; margin: 0 3%;">
