--- a/Project/Client/Views/Admin/UsersManager.cshtml
+++ b/Project/Client/Views/Admin/UsersManager.cshtml
@@ -113,8 +113,8 @@
 				foreach (var user in Model.Users)
 				{
 					<tr>
-						<td><input type="checkbox" class="user-checkbox" value="@user.Id" /></td>
-						<td>
+						<td title="@user.Id"><input type="checkbox" class="user-checkbox" value="@user.Id" /></td>
+						<td title="@user.Avatar">
 							@if (!string.IsNullOrEmpty(user.Avatar))
 							{
 								<img src="@user.Avatar" alt="Avatar" style="width: 80px; height: 80px;" />
@@ -124,10 +124,10 @@
 								<img src="~/Image/avatar.jpeg" alt="Avatar" style="width: 80px; height: 80px;" />
 							}
 						</td>
-						<td>@user.Username</td>
-						<td>@(string.IsNullOrEmpty(user.DisplayName) ? "-" : user.DisplayName)</td>
-						<td>@user.Email</td>
-						<td>
+						<td class=" text-truncate" style="max-width: 50px;" title="@user.Username">@user.Username</td>
+						<td class=" text-truncate" style="max-width: 50px;" title="@user.DisplayName">@(string.IsNullOrEmpty(user.DisplayName) ? "-" : user.DisplayName)</td>
+						<td class=" text-truncate" style="max-width: 150px;" title="@user.Email">@user.Email</td>
+						<td title="@user.PhoneNumber">
 							<span class="text-success">@user.PhoneNumber</span>
 						</td>
 
