--- a/Project/Client/Views/Shared/_Layout.cshtml
+++ b/Project/Client/Views/Shared/_Layout.cshtml
@@ -48,27 +48,27 @@
                         <!-- Các nút điều hướng -->
                         <ul class="navbar-nav d-flex align-items-center">
                             <li class="nav-item dropdown">
-                                <a class="nav-link btn fw-bold" href="#" id="navbarDropdown1" role="button">
+                                <a class="nav-link btn fw-bold"  id="navbarDropdown1" role="button">
                                     Products
                                 </a>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link btn fw-bold" href="#" id="navbarDropdown2" role="button">
+                                <a class="nav-link btn fw-bold"  id="navbarDropdown2" role="button">
                                     Game 2D/3D
                                 </a>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link btn fw-bold" href="#" id="navbarDropdown2" role="button">
+                                <a class="nav-link btn fw-bold"  id="navbarDropdown2" role="button">
                                     Play
                                 </a>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link btn fw-bold" href="#" id="navbarDropdown2" role="button">
+                                <a class="nav-link btn fw-bold"  id="navbarDropdown2" role="button">
                                     Asset 2D/3D
                                 </a>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link btn fw-bold" href="#" id="navbarDropdown2" role="button">
+                                <a class="nav-link btn fw-bold"  id="navbarDropdown2" role="button">
                                     Help
                                 </a>
                             </li>
@@ -96,7 +96,7 @@
                                 <div id="google_element" style="display:none;"></div> <!-- Ẩn mặc định của Google -->
                             </li>
                             <li class="nav-item mx-2">
-                                <a class="nav-link" href="#"><i class="fa-solid fa-bell"></i></a>
+                                <a class="nav-link" ><i class="fa-solid fa-bell"></i></a>
                             </li>
                             <li class="nav-item">
                                 @if (ViewBag.User != null)
@@ -115,7 +115,7 @@
                                 }
                             </li>
                             <li class="nav-item dropdown ml-auto">
-                                <a class="nav-link dropdown-toggle" href="#" id="dropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <a class="nav-link dropdown-toggle" id="dropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 </a>
                                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
                                     <a class="navelement" asp-controller="User" asp-action="Register">Register</a>
